--- a/Makefile.Debug
+++ b/Makefile.Debug
@@ -87,7 +87,7 @@ $(DESTDIR_TARGET): ui_paint.h $(OBJECTS)
 	$(LINKER) $(LFLAGS) -o $(DESTDIR_TARGET) $(OBJECTS)  $(LIBS)
 
 qmake: FORCE
-	@$(QMAKE) -spec win32-g++ -o Makefile.Debug paintOnline.pro
+	@$(QMAKE) -spec win32-g++ "CONFIG+=debug" -o Makefile.Debug paintOnline.pro
 
 qmake_all: FORCE
 
